changed file names

--- a/myPortfolio/about.html
+++ b/myPortfolio/about.html
@@ -12,11 +12,11 @@
     </head>
     <body>
         <header>
-            <a href="projects.html" class="headingChild"><img src="./images/navbarHome.svg" width="250rem" alt="homeLogo"></a>
+            <a href="index.html" class="headingChild"><img src="./images/navbarHome.svg" width="250rem" alt="homeLogo"></a>
             <nav class="navChild">      
                 <a class="activeNav" href="about.html">About</a>
                 <a href="internships.html">Internships</a>
-                <a href="projects.html">Projects</a>           
+                <a href="index.html">Projects</a>           
             </nav>
 
             <div class="hamburger">
