--- a/myPortfolio/citations.html
+++ b/myPortfolio/citations.html
@@ -48,7 +48,7 @@
 
         <footer>
             <h2>Thank you for checking out my style guide and citations!</h2>
-            <a href="projects.html" class="footerLink">Back to Main Site</a>
+            <a href="index.html" class="footerLink">Back to Main Site</a>
             <a class="footerLink" href="https://github.com/taylorannliu/portfolio">Repository</a>
         </footer>
 
