--- a/myPortfolio/styleGuide.html
+++ b/myPortfolio/styleGuide.html
@@ -33,7 +33,7 @@
                 </div>
                 <div class="textChild">
                     <h1>Welcome to the Style Guide</h1>
-                    <p>Here is the Style Guide of my portfolio, detailing the type, colours, and element styles used on my portfolio. <a class="hyperlink" href="/projects.html">Return to the main portfolio here</a>. All code and visuals are done by me. All coding references I used are cited within the code, which you can view on my <a class="hyperlink" href="https://github.com/taylorannliu/portfolio">repository</a>. Enjoy!</p>
+                    <p>Here is the Style Guide of my portfolio, detailing the type, colours, and element styles used on my portfolio. <a class="hyperlink" href="/index.html">Return to the main portfolio here</a>. All code and visuals are done by me. All coding references I used are cited within the code, which you can view on my <a class="hyperlink" href="https://github.com/taylorannliu/portfolio">repository</a>. Enjoy!</p>
                 </div>
                 
             </section>
@@ -87,7 +87,7 @@
                 <nav class="navChild exampleBar">      
                     <a href="about.html">About</a>
                     <a href="internships.html">Internships</a>
-                    <a class="activeNav" href="projects.html">Projects</a>           
+                    <a class="activeNav" href="index.html">Projects</a>           
                 </nav>
                 <h3>Portfolio Item</h3>
                 <a class="portfolioItemlink" href="turquoiseGoatCards.html">
@@ -106,7 +106,7 @@
 
         <footer>
             <h2>Thank you for checking out my style guide and citations!</h2>
-            <a href="projects.html" class="footerLink">Back to Main Site</a>
+            <a href="index.html" class="footerLink">Back to Main Site</a>
             <a class="footerLink" href="https://github.com/taylorannliu/portfolio">Repository</a>
         </footer>
 
