--- a/myPortfolio/index.html
+++ b/myPortfolio/index.html
@@ -13,11 +13,11 @@
     </head>
     <body>
         <header>
-            <a href="projects.html" class="headingChild"><img src="./images/navbarHome.svg" width="250rem" alt="homeLogo"></a>
+            <a href="index.html" class="headingChild"><img src="./images/navbarHome.svg" width="250rem" alt="homeLogo"></a>
             <nav class="navChild">      
                 <a href="about.html">About</a>
                 <a href="internships.html">Internships</a>
-                <a class="activeNav" href="projects.html">Projects</a>           
+                <a class="activeNav" href="index.html">Projects</a>           
             </nav>
 
             <div class="hamburger">
