footer is pinned to bottom

--- a/internships.html
+++ b/internships.html
@@ -9,8 +9,10 @@
         <link href="./css/navbar.css" rel="stylesheet">
         <link href="./css/global.css" rel="stylesheet">
         <link href="./css/mainPage.css" rel="stylesheet">
+        <link href="./css/smallPage.css" rel="stylesheet">
     </head>
     <body>
+        <div class="smallPageContainer">
         <header>
             <a href="index.html" class="headingChild"><img src="./images/navbarHome.svg" width="250rem" alt="homeLogo"></a>
             <nav class="navChild">      
@@ -24,7 +26,7 @@
                 <div></div>
             </div>
         </header>
-
+        <div class="contentWrap">
         <section>
             <h1>My Work Experience</h1>
             <a class="portfolioItemlink" href="aquanow.html">
@@ -39,6 +41,7 @@
                 </div>
             </a>
         </section>
+        </div>
 
         <footer>
             <h2>Thank you for visiting my portfolio</h2>
@@ -46,6 +49,7 @@
             <a class="footerLink" href="https://github.com/taylorannliu/portfolio">Repository</a>
         </footer>
         <script src="js/hamburger.js"></script>
+        </div>
     </body>
 
 </html>
