--- a/about.html
+++ b/about.html
@@ -9,8 +9,10 @@
         <link href="./css/navbar.css" rel="stylesheet">
         <link href="./css/global.css" rel="stylesheet">
         <link href="./css/mainPage.css" rel="stylesheet">
+        <link href="./css/smallPage.css" rel="stylesheet">
     </head>
     <body>
+        <div class="smallPageContainer">
         <header>
             <a href="index.html" class="headingChild"><img src="./images/navbarHome.svg" width="250rem" alt="homeLogo"></a>
             <nav class="navChild">      
@@ -27,7 +29,7 @@
 
         </header>
 
-        
+        <div class="contentWrap">
         <section class="flexImageSection">
             <div class="flexInfo">
                 <h1>Hi, I'm Taylor.</h1>
@@ -39,14 +41,16 @@
                 <img src="./images/bioImage.png" width="100%" alt="a self portrait of sorts">
             </div>  
         </section>
+        </div>
 
         <footer>
             <h2>Thank you for visiting my portfolio</h2>
             <a href="styleGuide.html" class="footerLink">Style Guide and Citations</a>
             <a class="footerLink" href="https://github.com/taylorannliu/portfolio">Repository</a>
         </footer>
-        
+
         <script src="js/hamburger.js"></script>
+        </div>
     </body>
 
 </html>
