updated outgoing links

--- a/aquanow.html
+++ b/aquanow.html
@@ -47,7 +47,7 @@
        <section class="flexImageSection">
         <div class="flexInfo">
             <h2>Main Website Icons</h2>
-            <p>I created a series of artwork and icons, all adhering to an original art style I designed that conveys Aquanow’s brand identity. This work is viewable on the main company website, <a class="hyperlink" href="https://www.aquanow.io/">aquanow.io</a></p>
+            <p>I created a series of artwork and icons, all adhering to an original art style I designed that conveys Aquanow’s brand identity. This work is viewable on the main company website, <a class="hyperlink" target="_blank" href="https://www.aquanow.io/">aquanow.io</a></p>
             <p>Icons were sketched in Procreate, then vectorized in Adobe Illustrator.</p>
         </div>
         <div class="flexImage">
@@ -71,7 +71,7 @@
         <section class="flexImageSection altColors">
             <div class="flexInfo">
                 <h2>Aquapay Documentation</h2>
-                <p>I designed the information structure, various pieces of vector artwork, infographics, diagrams, and a favicon logo for the <a class="hyperlink" href="https://docs.aquapay.io/">Aquapay web app’s documentation site</a>.</p>
+                <p>I designed the information structure, various pieces of vector artwork, infographics, diagrams, and a favicon logo for the <a class="hyperlink" target="_blank" href="https://docs.aquapay.io/">Aquapay web app’s documentation site</a>.</p>
                 <p>Although the variety of my work for this project was quite expansive, I worked on every piece through a similar process. Everything started with research and sketching, then vector work in Adobe Illustrator, and then Figma to organize all the layouts together. Weaved between these steps were feedback sessions with my supervisor to gain critique and direction for what to focus on next.</p>
             </div>
             <div class="flexImage">
