--- a/boundByFlame.html
+++ b/boundByFlame.html
@@ -47,7 +47,7 @@
                 <h3>Tools I used:</h3>
                 <p>Figma, Procreate, Inkarnate</p>
                 <p>(Banner render by Navpreet Matharu)</p>
-                <a class="buttonSecondary" href="https://anyflip.com/fcweh/qzat/">View the full book</a>
+                <a class="buttonSecondary" target="_blank" href="https://anyflip.com/fcweh/qzat/">View the full book</a>
             </div>
         </section>
 
