--- a/empathApp.html
+++ b/empathApp.html
@@ -45,7 +45,7 @@
                 <p>Figma, Procreate, Protopie</p>
                 <h3>Skills:</h3>
                 <p>Research, Sketching, Wireframing, Prototyping</p>
-                <a href="https://cloud.protopie.io/p/6e1b20c9e74b56e475ceb419?ui=true&scaleToFit=true&enableHotspotHints=true&cursorType=touch&mockup=true&bgColor=%23F5F5F5&playSpeed=1&playerAppPopup=true" class="buttonSecondary">Try the Prototype</a>
+                <a target="_blank" href="https://cloud.protopie.io/p/6e1b20c9e74b56e475ceb419?ui=true&scaleToFit=true&enableHotspotHints=true&cursorType=touch&mockup=true&bgColor=%23F5F5F5&playSpeed=1&playerAppPopup=true" class="buttonSecondary">Try the Prototype</a>
             </div>
         </section>
 
