added UBC CPD internship and fixed figure class

--- a/internships.html
+++ b/internships.html
@@ -29,6 +29,18 @@
         <div class="contentWrap">
         <section>
             <h1>My Work Experience</h1>
+            <a class="portfolioItemlink" href="ubccpd.html">
+                <div class="portfolioItem">
+                    <div class="portfolioItemImage" id="ubccpdThumbnail"></div>
+                    <div class="portfolioItemText">
+                        <p class="portfolioItemCategory">UX, Illustration, Information Design, Web Development</p>
+                        <p class="portfolioItemTitle">Design Internship at UBC CPD</p>
+                        <p class="portfolioItemDescription">Interactive, educational resources to aid professional development of Canadian health-care providers.</p>
+
+                    </div>
+                </div>
+            </a>
+
             <a class="portfolioItemlink" href="aquanow.html">
                 <div class="portfolioItem">
                     <div class="portfolioItemImage" id="aquanowThumbnail"></div>
@@ -40,6 +52,7 @@
                     </div>
                 </div>
             </a>
+
         </section>
         </div>
 
