--- a/turquoiseGoatCards.html
+++ b/turquoiseGoatCards.html
@@ -54,7 +54,7 @@
                 <p>Turquoise Goat is a queer-owned 90s themed board game cafe located in downtown vancouver. The establishment aims to be a lively, inclusive, and accessible place for customers to play board games and enjoy uniquely-themed food and drinks made by Turquoise Goat’s diverse team.</p>
             </div>
             <div class="flexImage">
-                <figure>
+                <figure class="flexFigure">
                     <img src="./images/turquoiseGoat/tgCollage.png" width="100%" alt="Turquoise Goat's unique atmosphere">
                     <figcaption>Exterior and interior of Turquoise Goat</figcaption>
                 </figure>
@@ -64,15 +64,15 @@
         <section>
             <h2>Ethnography</h2>
             <p>The first step in designing something for the cafe was to learn more about them through ethnography. For this, my team and I went to the cafe with open minds, not thinking about what we want to design, because at this point, we did not know them enough to be truly designing for them and not our own opinions. To start, we took in the cafe’s atmosphere, observed how customers and staff interact, and enjoyed some of what they had to offer ourselves.</p>
-            <div class="flexDiv">
+            <div class="flexDiv flexFigureSection">
                 <div>
-                    <figure>
+                    <figure class="flexFigure">
                         <img src="./images/turquoiseGoat/boardgames.png" width="100%" alt="cart with board games">
                     </figure>
                     <figcaption>A mere fraction of Turquoise Goat’s vast selection of board games</figcaption>
                 </div>
                 <div>
-                    <figure>
+                    <figure class="flexFigure">
                         <img src="./images/turquoiseGoat/cereal.png" width="100%" alt="funky cereal and blue milk">
                     </figure>
                     <figcaption>Cereal with blue milk and Turquoise Goat’s specialty drink: the Lucky Duck</figcaption>
@@ -109,15 +109,15 @@
         <section>
             <h2>What is a Destination? (Participatory Design Workshop)</h2>
             <p>A few weeks later, we went back to the cafe to conduct a participatory workshop to define and unpack the meaning of a destination. For this, we planned 3 design activities to go through with Leah, the co-owner scheduled to take one hour in total. To make the experience go smoothly, I created worksheets and stickers to use in the workshop. We also conducted another session of this workshop, but online and with 3 regular Turquoise Goat customers.</p>
-            <div class="flexDiv">
+            <div class="flexDiv flexFigureSection">
                 <div>
-                    <figure>
+                    <figure class="flexFigure">
                         <img src="./images/turquoiseGoat/workshop1.png" width="100%" alt="design worksheets">
                     </figure>
                     <figcaption>Worksheets and stickers I designed</figcaption>
                 </div>
                 <div>
-                    <figure>
+                    <figure class="flexFigure">
                         <img src="./images/turquoiseGoat/workshop2.png" width="100%" alt="participatory workshop photo">
                     </figure>
                     <figcaption>Our participatory workshop with Leah, Turquoise Goat’s co-owner</figcaption>
@@ -143,7 +143,7 @@
                 <p>Afterwards, we created a customer persona for us to design for. This character encompassed was an amalgamation of recurring traits and opinions from the many customers we observed and interviewed during ethnography.</p>
             </div>
             <div class="flexImage">
-                <figure>
+                <figure class="flexFigure">
                     <img src="./images/turquoiseGoat/persona.png" width="100%" alt="persona poster with basic info">
                     <figcaption>Our persona, Enrique, a board game fan who likes to go to the cafe to spend time with his friends.</figcaption>
                 </figure>
@@ -177,15 +177,15 @@
                 <img src="./images/turquoiseGoat/goatsketch.png" width="100%" alt="rough sketches">
             </figure>
             <figcaption>Rough sketches for the first four trading cards</figcaption>
-            <div class="flexDiv">
+            <div class="flexDiv flexFigureSection">
                 <div>
-                    <figure>
+                    <figure class="flexFigure">
                         <img src="./images/turquoiseGoat/lines.png" width="100%" alt="lineart">
                         <figcaption>Card lineart. I placed card templates behind to see how the collage would look split up</figcaption>
                     </figure>
                 </div>
                 <div>
-                    <figure>
+                    <figure class="flexFigure">
                         <img src="./images/turquoiseGoat/finishedArt.png" width="100%" alt="final art file">
                         <figcaption>Final trading card art. This was later imported to Figma and put onto cards</figcaption>
                     </figure>
@@ -196,7 +196,7 @@
                     <p>Then, Alyssa designed the frames for the cards, and we put them together on Figma. All 4 of us then designed the packaging for the card booster packs. The next day, I printed them out on double-sided cardstock. All of us spent a day together cutting the cards, making the packs, and taking quality mock-up photos.</p>
                 </div>
                 <div class="flexImage">
-                    <figure>
+                    <figure class="flexFigure">
                         <img src="./images/turquoiseGoat/makingcards.png" width="100%" alt="work in progress image of cards">
                         <figcaption>Cutting, corner-rounding, and putting together booster packs</figcaption>
                     </figure>
