updated coming soon images and resume

--- a/ubccpd.html
+++ b/ubccpd.html
@@ -114,6 +114,7 @@
             </div>
             <div class="flexImage">
                 <img src="./images/ubccpd/mespPDF.jpg" alt="image coming soon" width="100%">
+                <figcaption>A collection of layouts I designed for the Midwifery Emergency Skills Program course book. ©UBC CPD.</figcaption>
             </div>
         </section>
        </div>
@@ -121,11 +122,12 @@
        <section class="flexImageSection">
         <div class="flexInfo">
             <h2>Abortion Access Infographic</h2>
-            <p>For a to-be-released course and national campaign about increasing abortion access, I developed and designed an infographic that details important statistics about abortions people may not know. </p>
-            <p>The aim for it is to help normalize abortion and inform people of their options in accessing abortion care. This will be a downloadable digital resource as well as a poster health-care providers can show to their patients.</p>
+            <p>For the online course: <em>We All Have a Role to Play: Increasing Access to Abortion Care in Canada</em>, which was a collaboration between UBC CPD, the Contraception and Abortion Research Team, and Health Canada. I developed and designed an infographic that details important statistics about abortions people may not know. </p>
+            <p>The aim for it was to help normalize abortion and inform people of their options in accessing abortion care. This is downloadable digital resource as well as a poster health-care providers can show to their patients.</p>
         </div>
         <div class="flexImage">
             <img src="./images/ubccpd/abortionInfographic.jpg" alt="image coming soon" width="100%">
+            <figcaption>Important statistics about abortion people may not know, to make prospective patients feel safe and informed. ©UBC CPD.</figcaption>
         </div>
        </section>
 
